2006-12-13 Replaced calls to where() in colors.py with much faster
           clip() and putmask() calls; removed inappropriate
           uses of getmaskorNone (which should be needed only
           very rarely); all in response to profiling by
           David Cournapeau.  Also fixed bugs in my 2-D
           array support from 12-09. - EF

2006-12-09 Replaced spy and spy2 with the new spy that combines
           marker and image capabilities - EF

2006-12-09 Added support for plotting 2-D arrays with plot:
           columns are plotted as in Matlab - EF

2006-12-09 Added linewidth kwarg to bar and barh; fixed arg
           checking bugs - EF

2006-12-07 Made pcolormesh argument handling match pcolor;
           fixed kwarg handling problem noted by Pierre GM - EF

2006-12-06 Made pcolor support vector X and/or Y instead of
           requiring 2-D arrays - EF

2006-12-05 Made the default Artist._transform None (rather than
           invoking identity_transform for each artist only to have it
           overridden later).  Use artist.get_transform() rather than
           artist._transform, even in derived classes, so that the
           default transform will be created lazily as needed - JDH

2006-12-03 Added LogNorm to colors.py as illustrated by
           examples/pcolor_log.py, based on suggestion by
           Jim McDonald.  Colorbar modified to handle LogNorm.
           Norms have additional "inverse" method. - EF

2006-12-02 Changed class names in colors.py to match convention:
           normalize -> Normalize, no_norm -> NoNorm.  Old names
           are still available.
           Changed __init__.py rc defaults to match those in
           matplotlibrc - EF

2006-11-22 Fixed bug in set_*lim that I had introduced on 11-15 - EF

2006-11-22 Added examples/clippedline.py, which shows how to clip line
           data based on view limits -- it also changes the marker
           style when zoomed in - JDH
