@@ -1,3 +1,6 @@
+    Boxplot can handle a list of vectors instead of just
+    an array, so vectors can have different lengths.
+
     Plot can handle 2-D x and/or y; it plots the columns.
 
     Added linewidth kwarg to bar and barh.
